# =============================================================================
# Project Configuration
# =============================================================================
cmake_minimum_required(VERSION 3.14)
project(libMKF LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

# =============================================================================
# Build Options
# =============================================================================
option(JS_ONLY "Compiles to native JS (No WASM)" OFF)
option(DEBUG_WASM "Build in debug mode" OFF)
option(BUILD_TESTS "Build tests" OFF)
option(BUILD_EXAMPLES "Build examples" OFF)
option(INCLUDE_MKF_TESTS "Build MKF tests" OFF)
option(UTPP_INCLUDE_TESTS_IN_BUILD "Build UnitTest++ tests" OFF)
option(HAVE_LAPACK "Enable LAPACK support" OFF)
option(ENABLE_MATPLOTPP "Enable matplotplusplus for AdvancedPainter" OFF)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release CACHE STRING "Build type" FORCE)
endif()

# =============================================================================
# Compiler Flags
# =============================================================================
# Base warning flags for our code
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
# Add -fwasm-exceptions only for emscripten
if(EMSCRIPTEN)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fwasm-exceptions")
endif()
# Suppress warnings from dependency code (MKF, svg, levmar, etc.) - must use add_compile_options for global effect
add_compile_options(
    -Wno-deprecated-declarations
    -Wno-unused-parameter
    -Wno-switch
    -Wno-delete-non-abstract-non-virtual-dtor
    -Wno-unused-but-set-variable
    -Wno-sign-compare
    -Wno-potentially-evaluated-expression
    -Wno-unknown-warning-option
    -Wno-unused-private-field
    -Wno-bitwise-instead-of-logical
    -Wno-format-truncation
)
# Suppress C preprocessor #warning directives from dependencies (levmar)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-cpp")

# =============================================================================
# Dependencies
# =============================================================================
include(FetchContent)

# Speed up matplotplusplus configuration by disabling optional features
set(MATPLOTPP_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
set(MATPLOTPP_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(MATPLOTPP_BUILD_HIGH_RESOLUTION_WORLD_MAP OFF CACHE BOOL "" FORCE)
set(MATPLOTPP_BUILD_EXPERIMENTAL_OPENGL_BACKEND OFF CACHE BOOL "" FORCE)

# Enable ngspice for WASM - using --with-ngshared with emscripten produces a
# static library (despite .so extension) that provides the sharedspice.h API.
# Based on ngspice patch #96: https://sourceforge.net/p/ngspice/patches/96/
set(ENABLE_NGSPICE ON CACHE BOOL "" FORCE)

# Skip LFS downloads for MAS (not needed for compilation)
set(ENV{GIT_LFS_SKIP_SMUDGE} 1)

# Fetch MKF and its schema submodules (MAS, CAS, PEAS, cci_coords) from remote.
# GIT_SUBMODULES instructs FetchContent to run `git submodule update --init`
# for those four paths after cloning MKF, so MKF's CMakeLists.txt can find the
# schemas at their expected relative paths (PROJECT_SOURCE_DIR/{MAS,CAS,PEAS}).
# (Local-dir debugging: replace GIT_REPOSITORY/GIT_TAG/GIT_SUBMODULES with
#  SOURCE_DIR ${CMAKE_SOURCE_DIR}/../MKF when iterating on MKF sources locally.)
FetchContent_Declare(MKF
    GIT_REPOSITORY https://github.com/OpenMagnetics/MKF.git
    GIT_TAG main
    GIT_SUBMODULES "MAS;CAS;PEAS;cci_coords"
)

FetchContent_Declare(magic-enum
    GIT_REPOSITORY https://github.com/Neargye/magic_enum
    GIT_TAG v0.9.6
)

FetchContent_MakeAvailable(MKF magic-enum)

# =============================================================================
# Path Configuration
# =============================================================================
# MAS.hpp is generated by MKF's quicktype step into CMAKE_BINARY_DIR/MAS/.
set(MAS_DIRECTORY "${CMAKE_BINARY_DIR}/MAS/")
set(DEPS_DIR "${CMAKE_BINARY_DIR}/_deps")

message(STATUS "MAS_DIRECTORY: ${MAS_DIRECTORY}")

# =============================================================================
# Executables
# =============================================================================
add_executable(libMKF src/libMKF.cpp)
add_executable(libInsulationCoordinator src/libInsulationCoordinator.cpp)
add_executable(libCrossReferencers src/libCrossReferencers.cpp)

# Common include directories for all targets
set(COMMON_INCLUDE_DIRS
    ${CMAKE_SOURCE_DIR}/include
    ${DEPS_DIR}/magic-enum-src/include/magic_enum
    ${DEPS_DIR}/json-src/include
    ${DEPS_DIR}/json-src/include/nlohmann
    ${DEPS_DIR}/svg-src/src
    ${DEPS_DIR}/spline-src/src
    ${DEPS_DIR}/eigen-src
    ${MAS_DIRECTORY}
    ${CMAKE_BINARY_DIR}/CAS
)

foreach(target libMKF libInsulationCoordinator libCrossReferencers)
    target_include_directories(${target} PRIVATE ${COMMON_INCLUDE_DIRS})
    target_link_libraries(${target} PRIVATE MKF)
    # Add ENABLE_NGSPICE compile definition so libMKF.cpp knows ngspice is available
    if(ENABLE_NGSPICE)
        target_compile_definitions(${target} PRIVATE ENABLE_NGSPICE)
    endif()
endforeach()

# =============================================================================
# WASM/JS Configuration
# =============================================================================
if(JS_ONLY)
    message(STATUS "Setting compilation target to native JavaScript")
    set(CMAKE_EXECUTABLE_SUFFIX ".js")
    set_target_properties(libMKF PROPERTIES 
        LINK_FLAGS "-s WASM=0 -s EXPORTED_FUNCTIONS='[_main, _getCoreShapeNames, _process_operating_point]' -s EXPORT_ES6=1"
    )
else()
    message(STATUS "Setting compilation target to WASM")
    set(CMAKE_EXECUTABLE_SUFFIX ".wasm.js")
    
    # Common WASM link flags
    set(WASM_LINK_FLAGS
        "-O3"
        "-s WASM=1"
        "-s MAXIMUM_MEMORY=4gb"
        "-s STACK_SIZE=67108864"
        "-s INITIAL_MEMORY=134217728"
        "-s ALLOW_MEMORY_GROWTH"
        "-s EXPORT_ES6=1"
        "-s EXCEPTION_CATCHING_ALLOWED=[..]"
        "-s SUPPORT_LONGJMP=wasm"
        "-fwasm-exceptions"
        "-l embind"
        "--bind"
        "--use-preload-cache"
    )
    
    # Debug flags (optional)
    if(DEBUG_WASM)
        list(APPEND WASM_LINK_FLAGS
            "-g3"
            "-s ASSERTIONS=2"
            "-s SAFE_HEAP=1"
            "-s STACK_OVERFLOW_CHECK=2"
            "-s DEMANGLE_SUPPORT=1"
            "--source-map-base http://localhost:5173/"
        )
        list(REMOVE_ITEM WASM_LINK_FLAGS "-O3")
    endif()
    
    list(JOIN WASM_LINK_FLAGS " " WASM_LINK_FLAGS_STRING)
    
    foreach(target libMKF libInsulationCoordinator libCrossReferencers)
        set_target_properties(${target} PROPERTIES LINK_FLAGS "${WASM_LINK_FLAGS_STRING}")
    endforeach()
endif()
